@@ -944,3 +944,4 @@ The bandwidth usage graphs can be restricted to showing just servers that are ov
 Move some rarely-used options to the Advanced section of the Module Config page.
 Additional manually configured nameservers can now be more easily entered in server templates, in the BIND DNS domain section.
 Converted all command-line API scripts to use POD format documentation.
+Added the Virtualmin API helper command /usr/bin/virtualmin, which lets you more easily call API scripts with a command like "virtualmin list-domains --multiline". Help on commands can also be displayed with like "virtualmin help list-domains".
